--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.12.2",
     "pinia": "^2.3.1",
+    "typeface-ibm-plex-mono": "^1.1.13",
     "vue": "^3.5.22"
   },
   "devDependencies": {
